css is bundled properly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF8">
         <title>Project Template</title>
+        <link rel="stylesheet" href="dist/styles.css">
         <script src="dist/vendor.js" type="text/javascript" defer></script>
         <script src="dist/application.js" type="text/javascript" defer></script>
     </head>
